changed navbar button margins on mobile and fixed page scaling on very small phones

--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,10 @@ video {
   border-radius: 10px;
   padding-bottom: 15rem;
 }
+
+@media screen and (max-width: 320px) {
+  .App {
+    overflow-x: hidden;
+  }
+
+}
