--- a/src/assets/styles/NavBar.css
+++ b/src/assets/styles/NavBar.css
@@ -22,7 +22,7 @@
 
 @media screen and (max-width: 320px) {
     .navbar-title {
-        height: 32px;
+        height: 30px;
     }
 }
 
